--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ body {
   backdrop-filter: blur(100px);
   border-radius: 12px;
   padding: 20px;
+  box-shadow: 3px 2px 50px -4px rgba(0, 0, 0, 0.75);
+}
+
+#input-city {
+  color: white;
 }
 
 .input-container {
@@ -94,18 +99,31 @@ h4 {
   justify-content: center;
 }
 
-.weather-tempeature {
+.weather-temperature {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: space-around;
+  margin-top: 10px;
+}
+
+.state-div {
+  display: flex;
   justify-content: center;
+  align-items: center;
   margin-bottom: 50px;
   color: rgb(211, 186, 186);
 }
 
-.weather-tempeature p {
+.weather-temperature-infos {
+margin-top: -15px;
+
+
+}
+ 
+#temp {
   font-size: 50px;
   color: white;
+  margin-bottom: -5px;
 }
 
 .weather-humidity-wind {
@@ -114,7 +132,7 @@ h4 {
   justify-content: space-between;
   font-size: 14px;
   border-bottom: 1px solid rgb(103, 103, 103);
-  padding-bottom: 30px;
+  padding-bottom: 50px;
 }
 
 .weather-humility {
@@ -145,6 +163,23 @@ h4 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 40px;
+  margin-top: 20px;
   color: rgb(128, 125, 125);
+}
+
+.image-container img {
+ width: 70px;
+ animation: float 3s ease-in-out infinite;
+}
+
+@keyframes float {
+  0% {
+      transform: translateY(0px);
+  }
+  50% {
+      transform: translateY(-6px);
+  }
+  100% {
+      transform: translateY(0px);
+  }
 }
